# poly

./: .build-version  .gitignore  Dockerfile  PolyBot.bat  SYSTEM_GUIDE.md  TODO.md  docker-compose.yml  ecosystem.config.js  package-lock.json  package.json  railway.json  requirements.txt
config/: .env.example  config.yaml  summary_backup.json  trades_backup.json  wallets.json  wallets_backup.json
decision/: Dockerfile  requirements.txt
decision/src/: __init__.py  main.py  metrics.py
decision/src/risk/: filters.py
decision/src/sizing/: __init__.py  strategies.py
decision/src/state/: __init__.py  positions.py
detection/: Dockerfile  requirements.txt
detection/src/: __init__.py  main.py  metrics.py
detection/src/ipc/: __init__.py  publisher.py
detection/src/onchain/: __init__.py  monitor.py
detection/src/websocket/: __init__.py  clob_client.py
execution/: Cargo.toml  Dockerfile
execution/src/: main.rs
execution/src/order/: builder.rs  mod.rs  signer.rs
execution/src/submission/: clob.rs  mod.rs
grafana/: Dockerfile
grafana/provisioning/dashboards/: copy-trading.json
grafana/provisioning/datasources/: datasources.yml
logs/: cigarettes_trades.json
monitoring/: docker-compose.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: copy-trading.json
monitoring/grafana/provisioning/datasources/: infinity.yml
prometheus/: Dockerfile  prometheus.yml
scripts/: backtest.py  health_check.py  paper_trade.py  real_copy_trade.mjs  simulate.py  simulate_with_metrics.py  start.sh  track_cigarettes.py  track_multi_wallets.py
