[package]
name = "poly-execution"
version = "0.1.0"
edition = "2021"
authors = ["Polymarket Copy-Trading Bot"]
description = "High-performance order execution service for Polymarket copy-trading"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "net"] }

# Ethereum/Polygon interaction
alloy = { version = "0.1", features = ["full"] }
alloy-primitives = "0.7"
alloy-sol-types = "0.7"

# EIP-712 signing
ethers = { version = "2.0", features = ["legacy"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
sha3 = "0.10"
hex = "0.4"

# Unix sockets
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
